--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -238,10 +238,11 @@
 
 "kCreating_gif" = "正在生成GIF動畫文件...";
 
-"kShareOtherText" = "酷圖分享，畫的詞是［%@］";
-"kShareMeText" = "看看我畫的酷圖，畫的詞是［%@］";
-"kShareGIFOtherText" = "酷圖分享，畫的詞是［%@］";
-"kShareGIFMeText" = "看看我畫的酷圖，畫的詞是［%@］";
+"kShareOtherText" = "我在玩@猜猜畫畫手機版，對手真油菜花！TA畫的是［%@］，沒想到吧~！我也木有想到！果斷圍觀啊！#猜猜畫畫美圖分享# http://caicaihuahua.me";
+"kShareMeText" = "我在玩@猜猜畫畫手機版，快來圍觀我畫了什麼吧！畫的詞是［%@］，看來我畫工還不錯！#猜猜畫畫美圖分享# http://caicaihuahua.me";
+
+"kShareGIFOtherText" = "我在玩@猜猜畫畫手機版，對手真油菜花！TA畫的是［%@］，沒想到吧~！我也木有想到！果斷圍觀啊！#猜猜畫畫動畫炫圖分享# http://caicaihuahua.me";
+"kShareGIFMeText" = "我在玩@猜猜畫畫手機版，快來圍觀我的動畫炫圖！畫的詞是［%@］，看來我畫工還不錯！#猜猜畫畫動畫炫圖分享# http://caicaihuahua.me";
 
 "kShareSend" = "發送微博";
 
