add tips while uploading gif

--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -274,3 +274,5 @@
 "kAll" = "  所有";
 "kMine" = "我的  ";
 "kNone" = "无";
+"kGifNotice" = "生成的动态图片大小为%.2fMB,上传该图片将会消耗好些时间，对于部分微博（如新浪）不可上传大于5MB的图片";
+"kGifTips" = "温馨提示";
