--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -273,3 +273,5 @@
 "kAll" = " 所有";
 "kMine" = "我的 ";
 "kNone" = "無";
+"kGifNotice" = "生成的動態圖片大小為%.2fMB,上傳該圖片將會消耗好些時間，對於部分微博（如新浪）不可上傳大於5MB的圖片";
+"kGifTips" = "溫馨提示";
