--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -263,3 +263,5 @@
 "kAll" = "  All";
 "kMine" = "Mine  ";
 "kNone" = "None";
+"kGifNotice" = "The size of GIF is %.2fMB,it may cost some time for publishing";
+"kGifTips" = "Tips";
