check for repeated report

--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -275,3 +275,4 @@
 "kNone" = "無";
 "kGifNotice" = "生成的動態圖片大小為%.2fMB,上傳該圖片將會消耗好些時間，對於部分微博（如新浪）不可上傳大於5MB的圖片";
 "kGifTips" = "溫馨提示";
+"kContentRepeat" = "您已經匯報過這個問題了!";
