--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -265,3 +265,4 @@
 "kNone" = "None";
 "kGifNotice" = "The size of GIF is %.2fMB,it may cost some time for publishing";
 "kGifTips" = "Tips";
+"kContentRepeat" = "You have reported it just now!";
