--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -276,4 +276,8 @@
 "kNone" = "无";
 "kGifNotice" = "生成的动态图片大小为%.2fMB,上传该图片将会消耗好些时间，对于部分微博（如新浪）不可上传大于5MB的图片";
 "kGifTips" = "温馨提示";
-"kContentRepeat" = "您已经汇报过这个问题了!";
+"kContentRepeat" = "您已经反馈过了";
+//4月23新增
+"kEnterPassword" = "请输入密码";
+"kPsdNotMatch" = "密码错误";
+"kEmailNotFound" = "E-mail地址尚未注册";
