--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -275,4 +275,8 @@
 "kNone" = "無";
 "kGifNotice" = "生成的動態圖片大小為%.2fMB,上傳該圖片將會消耗好些時間，對於部分微博（如新浪）不可上傳大於5MB的圖片";
 "kGifTips" = "溫馨提示";
-"kContentRepeat" = "您已經匯報過這個問題了!";
+"kContentRepeat" = "您已經反饋過了";
+//4月23新增
+"kEnterPassword" = "請輸入密碼";
+"kPsdNotMatch" = "密碼錯誤";
+"kEmailNotFound" = "E-mail地址尚未註冊";
