--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -290,3 +290,7 @@
 "kEnterPassword" = "请输入密码";
 "kPsdNotMatch" = "密码错误";
 "kEmailNotFound" = "E-mail地址尚未注册";
+
+//4.27 add by Gamy
+"kBuyColorDialogTitle" = "购买颜色";
+"kBuyColorDialogMessage" = "购买颜色将花费%d金币，确定吗？";
