--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -289,3 +289,7 @@
 "kEnterPassword" = "請輸入密碼";
 "kPsdNotMatch" = "密碼錯誤";
 "kEmailNotFound" = "E-mail地址尚未註冊";
+
+//4.27 add by Gamy
+"kBuyColorDialogTitle" = "購買顏色";
+"kBuyColorDialogMessage" = "購買顏色將花費%d金幣，確定嗎？";
