save drawings only user click the "save" button in result controller

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -274,8 +274,10 @@
 
 "kNetworkErrorTitle" = "Connection Error";
 "kNetworkErrorMessage" = "Network connection error. Please check the network settings.";
+
 //4月23新增
 "kEnterPassword" = "Please enter password";
 "kPsdNotMatch" = "Incorrect password";
 "kEmailNotFound" = "Email not found";
-
+"kSaveImageOK" = "Drawing Saved";
+"kDeleteAll" = "Delete All";
