--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -69,7 +69,7 @@
 
 
 "kContinue" = "继续 [%d]";
-"kExit" = "退出";
+"kExit" = "退出游戏";
 "kSave" = "保存";
 "kTurnResult" = "本轮结果";
 "kBuyColor" = "购买颜色";
@@ -290,3 +290,5 @@
 "kEnterPassword" = "请输入密码";
 "kPsdNotMatch" = "密码错误";
 "kEmailNotFound" = "E-mail地址尚未注册";
+"kSaveImageOK" = "作品已成功保存";
+"kDeleteAll" = "删除所有作品";
