--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -296,4 +296,5 @@
 //4.27 add by Gamy
 "kBuyColorDialogTitle" = "購買顏色";
 "kBuyColorDialogMessage" = "購買顏色將花費%d金幣，確定嗎？";
-
+"guest" = "路人甲";
+"kOnlineUserCount" = "當前在線:%d";
