--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -277,15 +277,15 @@
 "kGifNotice" = "生成的动态图片大小为%.2fMB,上传该图片将会消耗好些时间，对于部分微博（如新浪）不可上传大于5MB的图片。";
 "kGifTips" = "温馨提示";
 
-"kContentRepeat" = "您已经反馈过了";
+"kContentRepeat" = "谢谢，您已经反馈过了";
 
 
-"kContentRepeat" = "您已经汇报过这个问题了!";
+"kContentRepeat" = "谢谢，您已经汇报过这个问题了!";
 
 /*the new words below without Japanese*/
 
 "kNetworkErrorTitle" = "网络连接失效";
-"kNetworkErrorMessage" = "网络连接失效，请检查网络设置。";
+"kNetworkErrorMessage" = "无法访问互联网，请检查手机是否正确连接到网络或者WIFI。";
 //4月23新增
 "kEnterPassword" = "请输入密码";
 "kPsdNotMatch" = "密码错误";
@@ -303,4 +303,4 @@
 
 "kPublishWeiboSuccAndEarnCoins" = "微博已发送，你获得了%d金币！";
 "guest" = "路人甲";
-"kOnlineUserCount" = "当前在线:%d";
+"kOnlineUserCount" = "在线用户共%d人";
