add sounds code

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -292,3 +292,6 @@
 "kOnlineUserCount" = "Online:%d";
 "kContactNull" = "Contact could not be empty.";
 "kFailStartGame" = "Room is playing. Please try another room.";
+"kSound" = "Sound";
+"kON" = " ON";
+"kOFF" = "OFF ";
