--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -306,3 +306,6 @@
 "kOnlineUserCount" = "在线用户共%d人";
 "kContactNull" = "联系方式不能为空哦。";
 "kFailStartGame" = "房间已经开始玩了，请选择另一个房间吧。";
+"kSound" = "音效";
+"kON" = " 开";
+"kOFF" = "关 ";
