--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -305,3 +305,11 @@
 "kAddAsFriend" = "Add as friend";
 "kAlreadyBeFriend" = "Friend";
 "kDidNottFindThisUser" = "No matching users";
+
+
+
+"kLevelSettings" = "Guess Level";
+"kEasyLevel" = "Easy";
+"kNormalLevel" = "Normal";
+"kHardLevel" = "Hard";
+"kLevelSelection" = "Level Selection";
