--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -318,3 +318,10 @@
 "kAddAsFriend" = "加為好友";
 "kAlreadyBeFriend" = "已經是好友";
 "kDidNottFindThisUser" = "沒有找到此用戶";
+
+
+"kLevelSettings" = "猜詞難度";
+"kEasyLevel" = "業餘";
+"kNormalLevel" = "專業";
+"kHardLevel" = "大師";
+"kLevelSelection" = "難度選擇";
