change friend room controller.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -313,3 +313,6 @@
 "kNormalLevel" = "Normal";
 "kHardLevel" = "Hard";
 "kLevelSelection" = "Level Selection";
+"kPlayWithFriend" = "Friend Play";
+"kCreateRoom" = "Create Room";
+"kSearchRoom" = "Search Room";
