--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -312,6 +312,8 @@
 "kMyFriends" = "我的好友";
 "kFollow" = "關注";
 "kFans" = "粉絲";
+"kNoFollow" = "還沒有關注呢";
+"kNoFans" = "還沒有粉絲呢";
 "kEdit" = "編輯";
 "kAddFriend" = "添加好友";
 "kSearch" = "搜索";
