finish create room.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -318,3 +318,8 @@
 "kPlayWithFriend" = "Friend Play";
 "kCreateRoom" = "Create Room";
 "kSearchRoom" = "Search Room";
+
+
+"kPlaying" = "Playing";
+"kWaitting" = "Waitting";
+"kFull" = "Full";
