--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -311,8 +311,9 @@
 "kUpdateFansFailed" = "Network error, update fans failed!";
 "kFollowFailed" = "Network error, follow failed!";
 "kUnfollowFailed" = "Network error, unfollow failed!";
-"kEnterWords" = "Please enter user nickname";
-"kSearchFailed" = "Network errors, search failed!";
+"kEnterWords" = "Please enter the content";
+"kSearchUserPlaceholder" = "Nickname/Facebook/Email";
+"kSearchFailed" = "Network error, search failed!";
 "kMyself" = "Myself";
 
 "kLevelSettings" = "Guess Level";
