--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -327,6 +327,7 @@
 "kUnfollowFailed" = "网络错误，取消关注失败！";
 "kEnterWords" = "请输入内容";
 "kSearchUserPlaceholder" = "昵称/微博昵称/QQ号/邮箱";
+"kSearchFailedTitle" = "网络错误";
 "kSearchFailed" = "网络错误，搜索失败！";
 "kMyself" = "我";
 
