--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -326,6 +326,7 @@
 "kUnfollowFailed" = "網絡錯誤，取消關注失敗！";
 "kEnterWords" = "請輸入內容";
 "kSearchUserPlaceholder" = "暱稱/微博暱稱/QQ號/郵箱";
+"kSearchFailedTitle" = "網絡錯誤";
 "kSearchFailed" = "網絡錯誤，搜索失敗！";
 "kMyself" = "我";
 
