--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -344,3 +344,9 @@
 "kInvited" = "Invited";
 "kJoined" = "Joined";
 "kInvite" = "Invite";
+
+"kRoomCreating" = "Creating...";
+"kRoomSearching" = "Searching...";
+"kInviting" = "Inviting";
+
+"kRoomNameNumber" = "%@'s Room %d";
