--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -352,7 +352,7 @@
 "kMale" = "男";
 "kFemale" = "女";
 
-"kSayToYou" = "对你说: ";
+"kSayToYou" = "对你说: %@";
 
 "kRoomPasswordHolder" = "请输入房间口令";
 "kRoomNameHolder" = "请输入房间名字";
