--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -358,3 +358,16 @@
 "kIsPlaying" = "is playing";
 "kIsJoined" = "accepted";
 "kIsInvited" = "invited";
+
+"kFindRoomListFail" = "Fail to get room list.";
+"kCreateRoomFail" = "Fail to create room.";
+"kRemoveRoomFail" = "Fail to remove room.";
+"kSearchRoomFail" = "Fail to search room.";
+"kInviteFriendFail" = "Fail to invite friends.";
+
+"kFindRoomListSucc" = "Fetch rooms successfully";
+"kCreateRoomSucc" = "Create room successfully.";
+"kRemoveRoomSucc" = "Remove room successfully.";
+"kInviteFriendFail" = "Invite friends successfully.";
+
+"kRoomSearhTips" = "Nickname / Room name";
