--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -315,19 +315,22 @@
 "kNoFollow" = "還沒有關注呢";
 "kNoFans" = "還沒有粉絲呢";
 "kEdit" = "編輯";
-"kAddFriend" = "添加好友";
+"kSearchUser" = "搜索用戶";
 "kSearch" = "搜索";
-"kAddAsFriend" = "加為好友";
-"kAlreadyBeFriend" = "已經是好友";
+"kAddAsFriend" = "關注";
+"kAlreadyBeFriend" = "已關注";
 "kDidNottFindThisUser" = "沒有找到此用戶";
 "kUpdateFollowFailed" = "網絡錯誤，更新關注失敗！";
 "kUpdateFansFailed" = "網絡錯誤，更新粉絲失敗！";
+"kFollowSuccessfully" = "關注成功！";
 "kFollowFailed" = "網絡錯誤，關注失敗！";
+"kUnfollowSuccessfully" = "成功取消關注！";
 "kUnfollowFailed" = "網絡錯誤，取消關注失敗！";
 "kEnterWords" = "請輸入內容";
 "kSearchUserPlaceholder" = "暱稱/微博暱稱/QQ號/郵箱";
 "kSearchFailedTitle" = "網絡錯誤";
 "kSearchFailed" = "網絡錯誤，搜索失敗！";
+"kSearching" = "正在搜索...";
 "kMyself" = "我";
 "kMale" = "男";
 "kFemale" = "女";
