sort the room list.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -374,3 +374,5 @@
 "kInviteFriendFail" = "Invite friends successfully.";
 
 "kRoomSearhTips" = "Nickname / Room name";
+
+"kInputRoomPassword" = "Input room password";
