--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -376,3 +376,5 @@
 "kRoomSearhTips" = "Nickname / Room name";
 
 "kInputRoomPassword" = "Input room password";
+
+"kInviteFull" = "The room can only invite up to %d frieds, you have invited %d.";
