--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -390,3 +390,10 @@
 "kInputRoomPassword" = "Input room password";
 
 "kInviteFull" = "The room can only invite up to %d frieds, you have invited %d.";
+
+"kDownloadURL" = "Download file from %@ ?";
+"kYesDownload" = "Yes, download the file";
+"kNoOpenURL" = "No, open the URL";
+
+"kExpand" = "Expand";
+"kCollapse" = "Collapse";
