--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -404,3 +404,10 @@
 "kRoomSearhTips" = "昵称 / 房间名";
 "kInputRoomPassword" = "请输入房间口令";
 "kInviteFull" = "房间最多只能邀请%d个好友，你已经邀请了%d个。";
+
+"kDownloadURL" = "是否下载来自 %@ 的链接文件?";
+"kYesDownload" = "是的，我要下载";
+"kNoOpenURL" = "不是，继续打开链接";
+
+"kExpand" = "展开";
+"kCollapse" = "收缩";
