--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -352,6 +352,7 @@
 "kMale" = "男";
 "kFemale" = "女";
 "kSayToYou" = "對你說: %@";
+"kSayToYou:" = "對你說:";
 "kNobodyInRoom" = "房間裏沒有其他人時，不能私聊";
 
 "kPayAttentionToMe" = "關註我吧";
