--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -91,6 +91,7 @@
 "kCheckInMessage" = "哇，你今日簽到獲得了%d個金幣，記得明天再來!";
 "kCheckInAlreadyToday" = "你今天已經簽到過了，記得明天再來哦!";
 
+"kRegisterToEnter" = "馬上註冊\“猜猜畫畫\"進入遊戲吧";
 "kRegisterPromptLabel" = "微博登錄";
 "kRegisterTitleLabel" = "用戶註冊";
 "kEnterEmail" = "請輸入Email地址註冊";
