--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -91,6 +91,7 @@
 "kCheckInMessage" = "哇，你今日签到获得了%d个金币，记得明天再来!";
 "kCheckInAlreadyToday" = "你今天已经签到过了，记得明天再来哦!";
 
+"kRegisterToEnter" = "马上注册\“猜猜画画\"进入游戏吧";
 "kRegisterPromptLabel" = "微博登录";
 "kRegisterTitleLabel" = "用户注册";
 "kEnterEmail" = "请输入Email地址注册";
