--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -332,10 +332,6 @@
 "kSearchRoom" = "Search Room";
 
 
-"kPlaying" = "Playing";
-"kWaitting" = "Waitting";
-"kFull" = "Full";
-
 "kMale" = "Male";
 "kFemale" = "Female";
 "kSayToYou" = "Say to you: %@";
@@ -374,9 +370,11 @@
 
 "kRoomNameNumber" = "%@'s Room %d";
 
-"kIsPlaying" = "is playing";
-"kIsJoined" = "accepted";
-"kIsInvited" = "invited";
+"kUnFull" = "Unfull";
+"kFree" = "Free";
+"kFull" = "Full";
+"kFriendsPlaying" = "playing";
+"kFriendsInvited" = "invited";
 
 "kFindRoomListFail" = "Fail to get room list.";
 "kCreateRoomFail" = "Fail to create room.";
@@ -402,3 +400,4 @@
 "kExpand" = "Expand";
 "kCollapse" = "Collapse";
 "kMusicSettings" = "MusicSettings";
+"kNoneInvited" = "None invited";
