--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -347,9 +347,6 @@
 "kCreateRoom" = "创建房间";
 "kSearchRoom" = "搜索房间";
 
-"kPlaying" = "游戏中";
-"kWaitting" = "等待中";
-"kFull" = "已满人";
 
 "kMale" = "男";
 "kFemale" = "女";
@@ -388,9 +385,13 @@
 "kInviting" = "邀请好友中...";
 
 "kRoomNameNumber" = "%@的房间%d";
-"kIsPlaying" = "正在游戏中";
-"kIsJoined" = "已加入游戏";
-"kIsInvited" = "已被邀请";
+
+"kUnFull" = "未满";
+"kFree" = "空闲";
+"kFull" = "已满";
+"kFriendsPlaying" = "人游戏中";
+"kFriendsInvited" = "人已被邀请";
+
 
 "kFindRoomListFail" = "获取房间列表失败。";
 "kCreateRoomFail" = "创建房间失败。";
@@ -414,3 +415,4 @@
 "kExpand" = "展开";
 "kCollapse" = "收缩";
 "kMusicSettings" = "背景音乐";
+"kNoneInvited" = "尚未邀请朋友";
