--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -371,6 +371,7 @@
 
 "kChatDialogTitle" = "和【%@】聊天中";
 "kAllUser" = "所有人";
+"kInputWhatYouWantToSay" = "输入你想对TA说的话";
 
 "kRoomPasswordHolder" = "请输入房间口令";
 "kRoomNameHolder" = "请输入房间名字";
