fix common message bug

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -407,4 +407,5 @@
 "kUserLogin" = "User Login";
 
 "kNoneInvited" = "None invited";
+"kFirstGame" = "It's your first time to play, please register first.";
 
