--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -410,10 +410,17 @@
 "kYesDownload" = "是的，我要下載";
 "kNoOpenURL" = "不是，繼續打開鏈接";
 
-"kExpand" = "展开";
-"kCollapse" = "收缩";
-"kMusicSettings" = "背景音乐";
-"kLoadingURL" = "加载网页中...";
+"kExpand" = "展開";
+"kCollapse" = "收縮";
+"kCustomMusicDownload" = "個性化音樂下載";
+"kMusicSettings" = "背景音樂";
+"kLoadingURL" = "加載網頁中...";
+"kDefaultMusic" = "默認背景音樂";
+"kNoMusic" = "無";
+"kPrevious" = "前一頁";
+"kNext" = "後一頁";
+"kRefresh" = "刷新";
+"kStop" = "停止";
 
 "kUserLogin" = "玩家登入";
 
