--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -411,9 +411,9 @@
 "kNoOpenURL" = "不是，繼續打開鏈接";
 
 "kExpand" = "展開";
-"kCollapse" = "收縮";
+"kCollapse" = "收起";
 "kCustomMusicDownload" = "個性化音樂下載";
-"kMusicSettings" = "背景音樂";
+"kMusicSettings" = "背景音樂設置";
 "kLoadingURL" = "加載網頁中...";
 "kDefaultMusic" = "默認背景音樂";
 "kNoMusic" = "無";
