--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -416,6 +416,7 @@
 "kExpand" = "展开";
 "kCollapse" = "收起";
 "kCustomMusicDownload" = "个性化音乐下载";
+"kBackgroundMusic" = "背景音乐";
 "kMusicSettings" = "背景音乐设置";
 "kLoadingURL" = "加载网页中...";
 "kDefaultMusic" = "默认背景音乐";
