--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -92,10 +92,12 @@
 "kCheckInAlreadyToday" = "你今天已经签到过了，记得明天再来哦!";
 
 "kRegisterToEnter" = "马上注册\“猜猜画画\"进入游戏吧";
-"kRegisterPromptLabel" = "微博登录";
-"kRegisterTitleLabel" = "用户注册";
-"kEnterEmail" = "请输入Email地址注册";
-"kSubmit" = "提交";
+"kRegisterPromptLabel" = "使用微博账号玩";
+"kRegisterTitleLabel" = "猜猜画画";
+"kEnterEmail" = "请输入Email地址";
+"kStartGame" = "开始游戏";
+"kLookOverDraw" = "查看作品";
+"kPainted" = "画的";
 
 "kRegisteringUser" = "发送注册请求中...";
 "kSystemFailure" = "网络错误，请检查手机是否正确连接到互联网。";
