--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -94,7 +94,7 @@
 "kRegisterPromptLabel" = "Existing Account";
 "kRegisterTitleLabel" = "Draw Lively";
 "kEnterEmail" = "Enter Your Email Address";
-"kStartGame" = "Start Game";
+"kStartGame" = "Start";
 "kLookOverDraw" = "View Works";
 "kPainted" = "painted";
 
