--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -325,8 +325,10 @@
 "kDidNottFindThisUser" = "沒有找到此用戶";
 "kUpdateFollowFailed" = "網絡錯誤，更新關注失敗！";
 "kUpdateFansFailed" = "網絡錯誤，更新粉絲失敗！";
+"kFollowing" = "正在關注...";
 "kFollowSuccessfully" = "關注成功！";
 "kFollowFailed" = "網絡錯誤，關注失敗！";
+"kUnfollowing" = "正在取消關注...";
 "kUnfollowSuccessfully" = "成功取消關注！";
 "kUnfollowFailed" = "網絡錯誤，取消關注失敗！";
 "kEnterWords" = "請輸入內容";
