--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -420,7 +420,6 @@
 
 "kFriendPlayTitle" = "Rooms";
 "kInviteFriends" = "Invite";
-
+"kInviteFriendsTitle" = "Invite Friends";
 "kNoRoomTips" = "No Room. Create or search room.";
 "kSearchNoResult" = "No matching rooms.";
-
